adding ga/network and sample xornetwork code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@ name = "cell"
 version = "0.1.0"
 authors = ["charles <charles.mcallister@dunnker.com>"]
 license-file = "license.txt"
+
+[dependencies]
+rand = "*"
